fix missing border

--- a/styles/_modes.scss
+++ b/styles/_modes.scss
@@ -117,7 +117,7 @@ body {
   }
   .light & {
     &__header {
-      border-color: $dark;
+      border-color: $darker;
     }
     &__ul {
       li {
